Modal alignment fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,3 +41,7 @@
   text-align: center;
   width: 90%;
 }
+
+.align-left {
+  text-align: left
+}
